--- a/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
+++ b/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
@@ -18,6 +18,7 @@
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
   margin: 0;
+  font-weight: 800;
   -webkit-text-stroke: 0.07rem var(--negro-1);
   text-shadow:
     0.2rem 0.2rem 0 var(--color-1),
@@ -49,25 +50,24 @@
 .titulo {
   color: var(--blanco-1);
   font-family: var(--Titulo);
-  font-size: 0.7rem;
-  letter-spacing: 0.1rem;
+  font-size: 0.9rem;
   text-align: left;
+  font-weight: 700;
 }
 
 .informacionContenedor {
   background: var(--negro-1);
   border-radius: 7px;
-  padding: 0.4rem 0.6rem;
+  padding: 0.3rem 0.5rem;
   color: var(--blanco-1);
   font-family: var(--Texto);
-  font-size: 0.5rem;
-  letter-spacing: 0.05rem;
+  font-size: 0.7rem;
   border: 0.1rem solid var(--negro-2);
   box-shadow: 0.3rem 0.3rem 0 var(--negro-2);
 }
 
 .material-symbols-outlined {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
 }
 
 .informacionContenedor.simbolos {
@@ -97,8 +97,7 @@
   color: var(--blanco-1);
   font-family: var(--Texto);
   font-size:  0.5rem;
-  letter-spacing: 0.1rem;
-  padding: 0.4rem 0.6rem;
+  padding: 0.3rem 0.5rem;
   text-decoration: none;
 }
 
@@ -114,7 +113,7 @@
 }
 
 .contenedorEnlaces.linkedin i {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: #0077b5;
 }
 
@@ -124,7 +123,7 @@
 }
 
 .contenedorEnlaces.github i {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   color: #6e5494;
 }
 
@@ -191,7 +190,6 @@
     color: var(--blanco-1);
     font-family: var(--Titulo);
     font-size: 1.6rem;
-    letter-spacing: 0.2rem;
     text-align: left;
   }
 
@@ -202,7 +200,6 @@
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1rem;
-    letter-spacing: 0.1rem;
     border: 0.1rem solid var(--negro-2);
     box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
   }
@@ -281,7 +278,6 @@
     color: var(--blanco-1);
     font-family: var(--Titulo);
     font-size: 2rem;
-    letter-spacing: 0.2rem;
     text-align: left;
     margin-right: 3rem;
   }
@@ -293,7 +289,6 @@
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1.2rem;
-    letter-spacing: 0.1rem;
     border: 0.1rem solid var(--negro-2);
     box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
     margin-right: 1.5rem;
