--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.css
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.css
@@ -40,9 +40,10 @@
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
   margin: 0;
+  font-weight: 800;
   -webkit-text-stroke: 0.08rem var(--negro-1);
   text-shadow: 0.2rem 0.2rem 0 var(--color-1),
-        0rem 0rem 0 var(--color-1),
+      0rem 0rem 0 var(--color-1),
       0rem 0rem 0 var(--color-1),
       0rem 0rem 0 var(--color-1);
 }
@@ -91,7 +92,7 @@
   margin: 0 auto;
   border: 0.1rem solid var(--color-2);
   box-shadow: 0.3rem 0.3rem 0 var(--color-1);
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   margin-top: 2vh;
   font-family: var(--Texto);
 }
@@ -134,7 +135,7 @@
   }
 
   .descripcionCorta {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-family: var(--Texto);
     text-shadow:
       0 0.1rem 0.2rem var(--color-1),
@@ -154,7 +155,7 @@
     margin: 0 auto;
     border: 0.1rem solid var(--color-2);
     box-shadow: 0.6rem 0.6rem 0 var(--color-1);
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-top: 2vh;
     font-family: var(--Texto);
   }
@@ -207,6 +208,18 @@
       0rem 0rem 0 var(--color-1),
       0rem 0rem 0 var(--color-1),
       0rem 0rem 0 var(--color-1);
+  }
+
+  .descripcionCorta {
+    font-size: 1.6rem;
+    font-family: var(--Texto);
+    text-shadow:
+      0 0.1rem 0.2rem var(--color-1),
+      0 0 0.3rem var(--color-1);
+    -webkit-text-stroke: 0.07rem var(--color-2);
+    margin-top: 0.5vh;
+    padding-inline: 10%;
+    padding-bottom: 0.5vh;
   }
 
   .descripcionLarga {
