--- a/mi-portfolio/src/app/tecnologias/tecnologias.component.css
+++ b/mi-portfolio/src/app/tecnologias/tecnologias.component.css
@@ -21,6 +21,7 @@
   padding-top: 6vh;
   font-size: 1.8rem;
   letter-spacing: 0.2rem;
+  font-weight: 800;
   margin: 0;
   -webkit-text-stroke: 0.07rem var(--negro-1);
   text-shadow:
@@ -88,7 +89,7 @@
 }
 
 .tipoDesarrollo {
-  font-weight: bold;
+  font-weight: 800;
   font-size: 1.6rem;
   text-align: center;
   padding-bottom: 1.5rem;
