--- a/mi-portfolio/src/app/tecnologias/tecnologias.component.css
+++ b/mi-portfolio/src/app/tecnologias/tecnologias.component.css
@@ -32,7 +32,7 @@
 }
 
 .filaInferior {
-  margin-top: 5rem;
+  margin-top: 3rem;
   display: flex;
   justify-content: center;
   width: 100%;
@@ -63,7 +63,7 @@
   gap: 0.5rem;
   padding: 0.5rem;
   font-family: var(--Texto);
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: var(--blanco-1);
   transition: transform 0.35s ease, box-shadow 0.35s ease;
   z-index: 1;
@@ -83,16 +83,17 @@
   gap: 0.5rem;
   padding: 0.5rem;
   font-family: var(--Texto);
-  font-size: 1.2rem;
+  font-size: 0.9rem;
   color: var(--blanco-1);
   transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
 .tipoDesarrollo {
   font-weight: 800;
-  font-size: 1.6rem;
+  font-size: 0.9rem;
   text-align: center;
   padding-bottom: 1.5rem;
+  padding-top: 0.5rem;
 }
 
 .desarrollos {
@@ -181,7 +182,7 @@
     color: var(--blanco-1);
     font-family: var(--Titulo);
     padding-top: 3vh;
-    font-size: 3.2rem;
+    font-size: 3rem;
     letter-spacing: 0.2rem;
     margin: 0;
     -webkit-text-stroke: 0.1rem var(--negro-1);
@@ -221,7 +222,7 @@
     gap: 0.7rem;
     padding: 0.8rem;
     font-family: var(--Texto);
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: var(--blanco-1);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
     z-index: 1;
@@ -241,7 +242,7 @@
     gap: 0.7rem;
     padding: 0.8rem;
     font-family: var(--Texto);
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: var(--blanco-1);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
   }
@@ -354,7 +355,7 @@
     gap: 1.5rem;
     padding: 1.5rem;
     font-family: var(--Texto);
-    font-size: 2.5rem;
+    font-size: 1.6rem;
     color: var(--blanco-1);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
     z-index: 1;
@@ -374,13 +375,13 @@
     gap: 1.5rem;
     padding: 1.5rem;
     font-family: var(--Texto);
-    font-size: 2.5rem;
+    font-size: 1.6rem;
     color: var(--blanco-1);
     transition: transform 0.35s ease, box-shadow 0.35s ease;
   }
 
   .tipoDesarrollo {
-    font-size: 2rem;
+    font-size: 1.6rem;
     padding-bottom: 0.5rem;
   }
 
