--- a/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
+++ b/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
@@ -63,7 +63,7 @@
   font-family: var(--Texto);
   font-size: 0.7rem;
   border: 0.1rem solid var(--negro-2);
-  box-shadow: 0.3rem 0.3rem 0 var(--negro-2);
+  box-shadow: 0 0 6px 6px var(--negro-2);
 }
 
 .material-symbols-outlined {
@@ -93,7 +93,7 @@
   backdrop-filter: blur(10px);
   border-radius: 7px;
   border: 0.1rem solid var(--negro-2);
-  box-shadow: 0.3rem 0.3rem 0 var(--negro-2);
+  box-shadow: 0 0 6px 6px var(--negro-2);
   color: var(--blanco-1);
   font-family: var(--Texto);
   font-size:  0.5rem;
@@ -201,7 +201,7 @@
     font-family: var(--Texto);
     font-size: 1rem;
     border: 0.1rem solid var(--negro-2);
-    box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
+    box-shadow: 0 0 12px 6px var(--negro-2);
   }
 
   .material-symbols-outlined {
@@ -216,7 +216,7 @@
     backdrop-filter: blur(10px);
     border-radius: 10px;
     border: 0.1rem solid var(--negro-2);
-    box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
+    box-shadow: 0 0 12px 6px var(--negro-2);
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1.2rem;
@@ -261,7 +261,7 @@
     width: auto;
     margin: 0 auto;
     border: 0.1rem solid var(--color-2);
-    box-shadow: 0.6rem 0.6rem 0 var(--color-1);
+    box-shadow: 0 0 20px 6px var(--negro-2);
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -290,7 +290,7 @@
     font-family: var(--Texto);
     font-size: 1.2rem;
     border: 0.1rem solid var(--negro-2);
-    box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
+    box-shadow: 0 0 20px 6px var(--negro-2);
     margin-right: 1.5rem;
   }
 
@@ -306,7 +306,7 @@
     backdrop-filter: blur(10px);
     border-radius: 10px;
     border: 0.1rem solid var(--negro-2);
-    box-shadow: 0.6rem 0.6rem 0 var(--negro-2);
+    box-shadow: 0 0 20px 6px var(--negro-2);
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1.2rem;
