--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.html
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.html
@@ -11,12 +11,14 @@
                 interesado en el mundo de la <span class="colorContrarioDescripciones">Programación</span> y el <span class="colorContrarioDescripciones">Diseño Web</span>.</b>
             </p>
             <p class="textoBlanco descripcionLarga">
-                Soy un joven programador, cuya trayectoria se basa en trabajar con Java, 
-                ya sea con Frameworks como <span class="colorContrarioDescripciones">Spring, Springboot, Jakarta EE e Hibernate</span>
-                e IDEs como <span class="colorContrarioDescripciones">Eclipse, IntelliJ o VS Code</span>.
-                Desde pequeño me interesó mucho el mundo del diseño y las tecnologías,
-                por lo que me gusta usarlo como mi mayor recurso, ya sea para resolver
-                un problema creativamente como para desarrollar interfaces útiles y visualmente agradables.
+                Soy un programador joven en formación continua, con experiencia en el desarrollo de aplicaciones tanto en entorno backend como frontend. Mi base se encuentra en Java y sus principales frameworks (Spring, Spring Boot, Jakarta EE e Hibernate), complementado con el uso de IDEs como Eclipse, IntelliJ IDEA y Visual Studio Code.
+                <br><br>Con los años he desarrollado un interés especial por el diseño y la experiencia de usuario, lo que me ha llevado también a formarme en Angular, JavaScript y tecnologías orientadas a la web, creando interfaces funcionales, claras y atractivas visualmente.
             </p>
     </div>
 </div>
+
+<!-- Cambios para terminar, la linea del tiempo poner los span
+ el boton de ajuste cambiarlo de ligo usado
+ cambiar de posiciond los 2 primeros proyectos
+ revisar de proyectos secundarios porque va mal el indicador de abajo
+ mirar si podemos poner </> al fondo en vez de los copos -->
