--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
@@ -21,7 +21,7 @@
           <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
+          <p class="textoTrayectorias"><span class="resaltarLetras"></span>Durante este ciclo adquirí las bases de la programación y me especialicé en el desarrollo de aplicaciones en Java. Complementé mi formación con proyectos en Python y desarrollo móvil con Android Studio. Mi proyecto final consistió en una aplicación móvil funcional con despliegue y funcionalidades completas.</p>
         </div>
     </div>
   </div>
@@ -31,7 +31,7 @@
           <p class="titulo">ESTANCIA EN SERBATIC</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Aprendizaje en el desarrrollo web con <span class="resaltarLetras">Java</span> en el uso de <br/> <span class="resaltarLetras">Jakarta EE</span>, uso de nuevos IDEs de programación en Java como <span class="resaltarLetras">IntelliJ</span>. Uso de herramientas orientadas de Back como <span class="resaltarLetras">Postman</span> y <span class="resaltarLetras">Docker</span>. Desarrollo de varios proyectos web como el <br/> <span class="resaltarLetras">Acortador de URLs</span> o una <span class="resaltarLetras">Tienda online</span>.</p>
+          <p class="textoTrayectorias">En SERBATIC tuve mi primera toma de contacto con entornos profesionales. Trabajé en desarrollo web con Jakarta EE y aprendí a utilizar nuevas herramientas como IntelliJ, Postman y Docker. Participé en la construcción de aplicaciones web, entre ellas una tienda online y un primer prototipo de acortador de URLs.</p>
         </div>
     </div>
     <div class="filaLinea">
@@ -47,7 +47,6 @@
           <p class="titulo">09/2024 - 12/2024</p>
         </div>
     </div>
-    
   </div>
   <div class="linea">
     <div class="filaSuperiorIzquierda">
@@ -68,17 +67,17 @@
           <p class="titulo">ESTUDIO Y CURSOS DE DESARROLLO WEB</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Aprendizaje en lenguajes de programacion orientados en el desarrollo web. Primero con <span class="resaltarLetras">JavaScript</span>, después con <span class="resaltarLetras">Spring</span> y <span class="resaltarLetras">Springboot</span> con pequeños proyectos para aplicar el contenido, usando bases de datos relacionales como <span class="resaltarLetras">MySQL</span>. Por último conociminetos en el diseño más orientado al <span class="resaltarLetras">Front</span> con <span class="resaltarLetras">Angular</span> y proyectos juntando las 3 tecnologías en proyectos completos.</p>
+          <p class="textoTrayectorias">Tras finalizar DAM continué formándome con cursos enfocados al desarrollo web. Empecé con JavaScript y posteriormente profundicé en Spring y Spring Boot, trabajando con bases de datos MySQL y creando mis primeros proyectos web completos. Finalmente amplié mis capacidades al frontend con Angular, desarrollando aplicaciones full-stack combinando Angular + Spring Boot.</p>
         </div>
     </div>
   </div>
   <div class="linea">
     <div class="filaSuperiorIzquierda">
         <div class="enlacesContenedor">
-          <p class="titulo">Yorel</p>
+          <p class="titulo">TRABAJOS INDEPENDIENTES</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Aprendizaje en el desarrrollo web con <span class="resaltarLetras">Java</span> en el uso de <br/> <span class="resaltarLetras">Jakarta EE</span>, uso de nuevos IDEs de programación en Java como <span class="resaltarLetras">IntelliJ</span>. Uso de herramientas orientadas de Back como <span class="resaltarLetras">Postman</span> y <span class="resaltarLetras">Docker</span>. Desarrollo de varios proyectos web como el <br/> <span class="resaltarLetras">Acortador de URLs</span> o una <span class="resaltarLetras">Tienda online</span>.</p>
+          <p class="textoTrayectorias">Aplicando lo aprendido, realicé proyectos web en colaboración, entre ellos una web de servicios en Mallorca y un acortador de URLs completamente funcional para uso empresarial. Estos proyectos me permitieron trabajar con clientes reales y gestionar necesidades específicas, además de mantener código, seguridad y despliegues.</p>
         </div>
     </div>
     <div class="filaLinea">
@@ -91,7 +90,7 @@
     </div>
     <div class="filaSuperiorDerecha">
         <div class="enlacesContenedor">
-          <p class="titulo">09/2024 - 12/2024</p>
+          <p class="titulo">07/2024 - 09/2024</p>
         </div>
     </div>
     
@@ -99,7 +98,7 @@
   <div class="linea">
     <div class="filaSuperiorIzquierda">
         <div class="enlacesContenedor">
-          <p class="titulo">10/2022 - 12/2024</p>
+          <p class="titulo">09/2024 - Actualmente</p>
         </div>
     </div>
     
@@ -131,10 +130,10 @@
     </div>
     <div class="filaSuperiorDerecha">
         <div class="enlacesContenedor">
-          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
+          <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAW</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Primeros pasos en el mundo de la programación en el primer año, y en el segundo especialización en <span class="resaltarLetras">Java en el desarrolllo de aplicaciones</span>. Aprendizaje de programar en <span class="resaltarLetras">Python</span> y android con <span class="resaltarLetras">Android Studio</span>, pero en menor medida que <span class="resaltarLetras">Java</span>. Desarrollo de varias aplicaciones como mi proyecto final en una <span class="resaltarLetras">aplicación Movil</span> y uso de <span class="resaltarLetras">despliegue de aplicaciones</span> para una funcionalidad final.</p>
+          <p class="textoTrayectorias">Actualmente curso 2º de DAW, habiendo accedido directamente con buenas calificaciones. Continúo reforzando mis conocimientos en desarrollo web, orientándome hacia una formación más completa y una titulación a algo que me encaja más como soy.</p>
         </div>
     </div>
   </div>
