--- a/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
+++ b/mi-portfolio/src/app/proyectos-principales/proyectos-principales.component.css
@@ -309,6 +309,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 0 20px 6px var(--negro-2);
 }
 
 .texto {
@@ -331,7 +332,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  
+  box-shadow: 0 0 20px 6px var(--negro-2);
 }
 
 .imagen img {
