Cambiado las letras de la barra del tiempo, añadido un nuevo simbolo y animacion al menu, tambien cambiado la zona del contacto como se meustran los paneles y añadido el icono de la web

--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.html
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.html
@@ -17,8 +17,7 @@
     </div>
 </div>
 
-<!-- Cambios para terminar, la linea del tiempo poner los span
- el boton de ajuste cambiarlo de ligo usado
- cambiar de posiciond los 2 primeros proyectos
+<!--
  revisar de proyectos secundarios porque va mal el indicador de abajo
- mirar si podemos poner </> al fondo en vez de los copos -->
+ mirar si podemos poner </> al fondo en vez de los copos
+ Mirar otra letra de titulo -->
