--- a/mi-portfolio/src/app/menu-lateral/menu-lateral.component.html
+++ b/mi-portfolio/src/app/menu-lateral/menu-lateral.component.html
@@ -1,6 +1,6 @@
 <div class="contenedorMenuLateral" [class.collapsed]="menuCerrado()">
   <button class="logoBoton" (click)="cerrarMenu()">
-    <span #gearIcon class="material-symbols-outlined">settings</span>
+    <span #gearIcon class="material-symbols-outlined">blur_on</span>
   </button>
   <br/>
 
