--- a/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
+++ b/mi-portfolio/src/app/inicio-contacto/inicio-contacto.component.css
@@ -62,7 +62,7 @@
   color: var(--blanco-1);
   font-family: var(--Texto);
   font-size: 0.7rem;
-  border: 0.1rem solid var(--negro-2);
+  border: 0.1rem solid var(--color-2);
   box-shadow: 0 0 6px 6px var(--negro-2);
 }
 
@@ -200,7 +200,7 @@
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1rem;
-    border: 0.1rem solid var(--negro-2);
+    border: 0.1rem solid var(--color-2);
     box-shadow: 0 0 12px 6px var(--negro-2);
   }
 
@@ -261,7 +261,7 @@
     width: auto;
     margin: 0 auto;
     border: 0.1rem solid var(--color-2);
-    box-shadow: 0 0 20px 6px var(--negro-2);
+    box-shadow: 0.6rem 0.6rem 0 var(--color-1);
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -289,7 +289,7 @@
     color: var(--blanco-1);
     font-family: var(--Texto);
     font-size: 1.2rem;
-    border: 0.1rem solid var(--negro-2);
+    border: 0.15rem solid var(--color-2);
     box-shadow: 0 0 20px 6px var(--negro-2);
     margin-right: 1.5rem;
   }
