--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.css
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.css
@@ -67,8 +67,8 @@
 .colorContrarioDescripciones {
   color: var(--color-1);
   text-shadow:
-    0 0rem 0rem var(--blanco-1),
-    0 0 0rem var(--blanco-1);
+    0 0rem 0rem var(--color-1),
+    0 0 0rem var(--color-1);
 }
 
 .descripcionCorta {
