--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
@@ -21,7 +21,7 @@
           <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAM</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias"><span class="resaltarLetras"></span>Durante este ciclo adquirí las bases de la programación y me especialicé en el desarrollo de aplicaciones en Java. Complementé mi formación con proyectos en Python y desarrollo móvil con Android Studio. Mi proyecto final consistió en una aplicación móvil funcional con despliegue y funcionalidades completas.</p>
+          <p class="textoTrayectorias">Durante este ciclo adquirí las <span class="resaltarLetras">bases de la programación</span> y me especialicé en el <span class="resaltarLetras">desarrollo de aplicaciones en Java</span>. Finalizé mi formación con proyectos en <span class="resaltarLetras">Python</span> y desarrollo móvil con <span class="resaltarLetras">Android Studio</span>. Mi <span class="resaltarLetras">proyecto final</span> consistió en una <span class="resaltarLetras">aplicación móvil funcional</span> con despliegue y funcionalidades completas.</p>
         </div>
     </div>
   </div>
@@ -31,7 +31,7 @@
           <p class="titulo">ESTANCIA EN SERBATIC</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">En SERBATIC tuve mi primera toma de contacto con entornos profesionales. Trabajé en desarrollo web con Jakarta EE y aprendí a utilizar nuevas herramientas como IntelliJ, Postman y Docker. Participé en la construcción de aplicaciones web, entre ellas una tienda online y un primer prototipo de acortador de URLs.</p>
+          <p class="textoTrayectorias">En <span class="resaltarLetras">SERBATIC</span> tuve mi primera toma de contacto con entornos profesionales. Trabajé en <span class="resaltarLetras">desarrollo web</span> con <span class="resaltarLetras">Jakarta EE</span> y aprendí a utilizar nuevas herramientas como <span class="resaltarLetras">IntelliJ, Postman y Docker</span>. Participé en la construcción de aplicaciones web, entre ellas una <span class="resaltarLetras">tienda online</span> y un <span class="resaltarLetras">primer prototipo de un acortador de URLs</span>.</p>
         </div>
     </div>
     <div class="filaLinea">
@@ -67,7 +67,7 @@
           <p class="titulo">ESTUDIO Y CURSOS DE DESARROLLO WEB</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Tras finalizar DAM continué formándome con cursos enfocados al desarrollo web. Empecé con JavaScript y posteriormente profundicé en Spring y Spring Boot, trabajando con bases de datos MySQL y creando mis primeros proyectos web completos. Finalmente amplié mis capacidades al frontend con Angular, desarrollando aplicaciones full-stack combinando Angular + Spring Boot.</p>
+          <p class="textoTrayectorias">Tras <span class="resaltarLetras">finalizar DAM</span> continué formándome con cursos enfocados al <span class="resaltarLetras">desarrollo web</span>. Empecé con <span class="resaltarLetras">JavaScript</span> y posteriormente profundicé en <span class="resaltarLetras">Spring</span> y <span class="resaltarLetras">Spring Boot</span>, trabajando con bases de datos <span class="resaltarLetras">MySQL</span> y creando mis primeros proyectos web completos. Finalmente amplié mis capacidades al frontend con <span class="resaltarLetras">Angular</span>, desarrollando <span class="resaltarLetras">aplicaciones full-stack</span> combinando Angular + Spring Boot.</p>
         </div>
     </div>
   </div>
@@ -77,7 +77,7 @@
           <p class="titulo">TRABAJOS INDEPENDIENTES</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Aplicando lo aprendido, realicé proyectos web en colaboración, entre ellos una web de servicios en Mallorca y un acortador de URLs completamente funcional para uso empresarial. Estos proyectos me permitieron trabajar con clientes reales y gestionar necesidades específicas, además de mantener código, seguridad y despliegues.</p>
+          <p class="textoTrayectorias">Aplicando lo aprendido, realicé <span class="resaltarLetras">proyectos web en colaboración</span>, entre ellos una <span class="resaltarLetras">web de servicios de delivery en Mallorca</span> y un <span class="resaltarLetras">acortador de URLs</span> completamente funcional para <span class="resaltarLetras">uso empresarial</span>. Estos proyectos me dieron la oportunidad de trabajar con <span class="resaltarLetras">clientes reales</span> y gestionar necesidades específicas, además de mantener código, seguridad y despliegues.</p>
         </div>
     </div>
     <div class="filaLinea">
@@ -98,10 +98,9 @@
   <div class="linea">
     <div class="filaSuperiorIzquierda">
         <div class="enlacesContenedor">
-          <p class="titulo">09/2024 - Actualmente</p>
+          <p class="titulo">09/2025 - Actualmente</p>
         </div>
     </div>
-    
     <div class="filaLinea">
       <div class="contenedor">
         <div class="figura">
@@ -133,7 +132,7 @@
           <p class="titulo">ESTUDIOS EN EL GRADO SUPERIOR DE DAW</p>
         </div>
         <div class="enlacesContenedor">
-          <p class="textoTrayectorias">Actualmente curso 2º de DAW, habiendo accedido directamente con buenas calificaciones. Continúo reforzando mis conocimientos en desarrollo web, orientándome hacia una formación más completa y una titulación a algo que me encaja más como soy.</p>
+          <p class="textoTrayectorias">Actualmente curso <span class="resaltarLetras">2º de DAW</span>, habiendo accedido directamente con <span class="resaltarLetras">buenas calificaciones</span>. Continúo reforzando mis <span class="resaltarLetras">conocimientos en desarrollo web</span>, orientándome hacia una <span class="resaltarLetras">formación más completa</span> y una <span class="resaltarLetras">titulación</span> a algo que me encaja más a como soy yo.</p>
         </div>
     </div>
   </div>
