Terminado el proyectod eañadir una nueva fuente, implementar aminaciones más fluidas y mejorar algunos paneles como se muestran

--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.html
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.html
@@ -11,13 +11,8 @@
                 interesado en el mundo de la <span class="colorContrarioDescripciones">Programación</span> y el <span class="colorContrarioDescripciones">Diseño Web</span>.</b>
             </p>
             <p class="textoBlanco descripcionLarga">
-                Soy un programador joven en formación continua, con experiencia en el desarrollo de aplicaciones tanto en entorno backend como frontend. Mi base se encuentra en Java y sus principales frameworks (Spring, Spring Boot, Jakarta EE e Hibernate), complementado con el uso de IDEs como Eclipse, IntelliJ IDEA y Visual Studio Code.
+                Soy un programador en formación continua, con experiencia en el desarrollo de aplicaciones tanto en entorno backend como frontend. Mi base se encuentra en Java y sus principales frameworks (Spring, Spring Boot, Jakarta EE e Hibernate), complementado con el uso de IDEs como Eclipse, IntelliJ IDEA y Visual Studio Code.
                 <br><br>Con los años he desarrollado un interés especial por el diseño y la experiencia de usuario, lo que me ha llevado también a formarme en Angular, JavaScript y tecnologías orientadas a la web, creando interfaces funcionales, claras y atractivas visualmente.
             </p>
     </div>
 </div>
-
-<!--
- revisar de proyectos secundarios porque va mal el indicador de abajo
- mirar si podemos poner </> al fondo en vez de los copos
- Mirar otra letra de titulo -->
