--- a/mi-portfolio/src/app/inicio/inicio.component.css
+++ b/mi-portfolio/src/app/inicio/inicio.component.css
@@ -4,22 +4,23 @@
   justify-content: center;
   align-items: center;
   transition: opacity 1s ease, transform 1s ease;
-  opacity: 1;
-  transform: translateY(0);
+  opacity: 0;
+  transform: translateY(10px);
+  overflow: hidden;
   padding-bottom: 3vh;
   padding-top: 3vh;
 }
 
-.slide:not(.visible) {
-  opacity: 0;
-  transform: translateY(10px);
+.slide.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .mensaje {
   position: fixed;
   bottom: 2rem;
-  left: 20%;
-  width: 60%;
+  left: 25%;
+  width: 50%;
   transform: translateX(-50%);
   background: var(--negro-1);
   border-radius: 7px;
@@ -28,7 +29,6 @@
   font-family: var(--Texto);
   text-align: center;
   font-size: 0.6rem;
-  letter-spacing: 0.1rem;
   border: 0.1rem solid var(--color-2);
   box-shadow: 0.2rem 0.2rem 0 var(--color-1);
   z-index: 9999;
@@ -50,8 +50,8 @@
   .mensaje {
     position: fixed;
     bottom: 2rem;
-    left: 30%;
-    width: 40%;
+    left: 32.5%;
+    width: 35%;
     transform: translateX(-50%);
     background: var(--negro-1);
     border-radius: 10px;
@@ -60,7 +60,6 @@
     font-family: var(--Texto);
     text-align: center;
     font-size: 1rem;
-    letter-spacing: 0.1rem;
     border: 0.1rem solid var(--color-2);
     box-shadow: 0.3rem 0.3rem 0 var(--color-1);
     z-index: 9999;
@@ -82,7 +81,6 @@
     font-family: var(--Texto);
     text-align: center;
     font-size: 1.2rem;
-    letter-spacing: 0.1rem;
     border: 0.1rem solid var(--color-2);
     box-shadow: 0.6rem 0.6rem 0 var(--color-1);
     z-index: 9999;
