Ultimo cambio a un mensaje que faltaba por añadir de la pagian inicio home

--- a/mi-portfolio/src/app/inicio-home/inicio-home.component.html
+++ b/mi-portfolio/src/app/inicio-home/inicio-home.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="filaInferior">
             <p class="textoBlanco descripcionCorta">
-                <b>No soy una IA, soy un desarrollador <span class="colorContrarioDescripciones">Back-End</span>, <br/>
+                <b>No soy una IA, soy un desarrollador <span class="colorContrarioDescripciones">Web</span>, <br/>
                 interesado en el mundo de la <span class="colorContrarioDescripciones">Programación</span> y el <span class="colorContrarioDescripciones">Diseño Web</span>.</b>
             </p>
             <p class="textoBlanco descripcionLarga">
