Pequeños cambiso de actualizaciónde  informacion que faltaban como el curriculumn y unas fechas erroneas

--- a/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
+++ b/mi-portfolio/src/app/inicio-linea-temporal/inicio-linea-temporal.component.html
@@ -90,7 +90,7 @@
     </div>
     <div class="filaSuperiorDerecha">
         <div class="enlacesContenedor">
-          <p class="titulo">07/2024 - 09/2024</p>
+          <p class="titulo">07/2025 - Actualmente</p>
         </div>
     </div>
     
